[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=2]

[node name="GameOver" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 778.0
margin_top = 312.0
margin_right = 1142.0
margin_bottom = 767.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 364.0
margin_bottom = 87.0
custom_constants/margin_bottom = 20

[node name="ScoreDisplayLabel" type="Label" parent="HBoxContainer/MarginContainer"]
margin_right = 364.0
margin_bottom = 67.0
theme = ExtResource( 2 )
text = "Game over
Your score: $SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 119.0
margin_right = 364.0
margin_bottom = 455.0
theme = ExtResource( 2 )

[node name="YourNick" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_right = 364.0
margin_bottom = 32.0
theme = ExtResource( 2 )
text = "Your nick"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickInput" type="LineEdit" parent="HBoxContainer/HBoxContainer"]
margin_top = 64.0
margin_right = 364.0
margin_bottom = 192.0
theme = ExtResource( 2 )
align = 1
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="HBoxContainer/HBoxContainer"]
margin_top = 224.0
margin_right = 364.0
margin_bottom = 336.0
theme = ExtResource( 2 )
disabled = true
text = "Add result"

[connection signal="text_changed" from="HBoxContainer/HBoxContainer/NickInput" to="." method="nick_text_changed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/SubmitButton" to="." method="submit_button_pressed"]
